import 'package:flutter/widgets.dart';

typedef K = Keys;

class Keys {
  static const quittingReasonTextField = Key('quittingReasonTextField');
  static const addReasonButton = Key('addReasonButton');
  static const nextButton = Key('nextButton');

  static const cigarattesAmountTextField = Key('cigarattesAmountTextField');
  static const cigarattesPriceTextField = Key('cigarattesPriceTextField');
  static const currencyDropdown = Key('currencyDropdown');

  static const startNowButton = Key('startNowButton');
}
