...
                buildHeader(context),
                for (int index = 0; index < content.length + content.length ~/ 2; index++)
                  index % 3 == 2 ? AdsService().nativeAd(templateType: TemplateType.medium) :
                  buildTextContainer(
                    context,
                    content[index - index ~/ 3]['title'],
                    content[index - index ~/ 3]['text']
                  ),
              ],
            ),
          ),
          AdsService().bannerAd
        ],
...
